--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@smastrom/react-rating": "^1.5.0",
+    "axios": "^1.7.4",
     "firebase": "^10.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
